fixed sign-up out of bounds

--- a/src/app/signup/signup.component.scss
+++ b/src/app/signup/signup.component.scss
@@ -5,4 +5,9 @@
     margin-top: -50px;
     display: flex;
     flex-direction: column;
+    background-color: #07101f;
+}
+.sized{
+    width: 100%;
+    height:410px;
 }
